services/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: default
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - image: lscr.io/linuxserver/overseerr:latest
          imagePullPolicy: Always
          name: overseerr
          resources: {}
          ports:
            - name: overseerr
              containerPort: 5055
          livenessProbe:
            httpGet:
              path: /
              port: overseerr
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: host-disk1
              mountPath: /config
              subPath: overseerr
            - name: nfs-vol-disk3
              mountPath: /disk3
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
        - name: nfs-vol-disk3
          nfs:
            server: 192.168.1.2
            path: /disk3
      restartPolicy: Always
status: {}
