services/overseerr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: overseerr
  namespace: default
spec:
  selector:
    app: overseerr
  ports:
    - port: 80
      targetPort: overseerr
