services/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: default
  # disable authentication since this includes auth with plex
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-url: https://auth.kristinn.pro/oauth2/auth
  #   nginx.ingress.kubernetes.io/auth-signin: https://auth.kristinn.pro/oauth2/start?rd=https://$host$request_uri
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - overseerr.kristinn.pro
      secretName: cloudflare-tls
  rules:
    - host: overseerr.kristinn.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 80
